- Forms global styling - Posts archives pagination styling - Add bottom margin to page covers - Minor responsive fix to newsletter form

--- a/website-styles/src/sass/template-parts/_posts-grid.scss
+++ b/website-styles/src/sass/template-parts/_posts-grid.scss
@@ -4,7 +4,7 @@ body.blog,
 	.wp-block-query {
 		font-family: $Primary-font;
 		max-width: 1680px !important;
-		padding-top: 6rem;
+		padding-top: 1.25rem;
 		padding-bottom: 6rem;
 
 		.wp-block-post-template.is-layout-grid {
